--- a/Cursuri/Curs 28.08 Node/index.html
+++ b/Cursuri/Curs 28.08 Node/index.html
@@ -7,6 +7,7 @@
     <title>Practice </title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi suscipit at enim iusto odit soluta amet repudiandae ab veniam deserunt. Repellendus numquam beatae eum similique eaque expedita esse odit in!</p>
     <h1 id = "heading"></h1>
     <script src = "main.js"></script>
 </body>
