--- a/Cursuri/Curs 28.08 Node/index.html
+++ b/Cursuri/Curs 28.08 Node/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice </title>
+    <link rel = "stylesheet" src = "style.css">
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi suscipit at enim iusto odit soluta amet repudiandae ab veniam deserunt. Repellendus numquam beatae eum similique eaque expedita esse odit in!</p>
+    <p>Salutari de la Agigea!</p>
+    <p>Salutari din Vama Veche!</p>
     <h1 id = "heading"></h1>
     <script src = "main.js"></script>
 </body>
